build: include java 11 in docker image
Includes java 11 as a secondary java version. This will allow running older spigot servers, when the correct java runtime is used to run the server.